[package]
name = "rs11_axum_api"
version = "0.1.0"
authors = ["Nick Farnan <nlf4@pitt.edu>"]
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

